--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "farang-e-commerce",
   "version": "1.0.0",
-  // "homepage": "https://altperson.github.io/currencyExchanger/",
+  "homepage": "https://altperson.github.io/Farang-E-Commerce/",
   "description": "",
   "main": "index.js",
   "scripts": {
